Add upper and lower bound

--- a/Assignment2/assignment2.ipynb
+++ b/Assignment2/assignment2.ipynb
@@ -164,23 +164,27 @@
     "  return hll\n",
     "\n",
     "relative_error = 0.01\n",
+    "\n",
     "hll_danish_substrings = create_hll_substrings('words_danish.txt', relative_error)\n",
+    "hll_danish_substrings_estimate = len(hll_danish_substrings)\n",
+    "hll_danish_substrings_lower_bound = hll_danish_substrings_estimate * (1 - relative_error)\n",
+    "hll_danish_substrings_upper_bound = hll_danish_substrings_estimate * (1 + relative_error)\n",
+    "print(f'{hll_danish_substrings_estimate} Danish substrings [{hll_danish_substrings_lower_bound}, {hll_danish_substrings_upper_bound}]')\n",
+    "\n",
     "hll_english_substrings = create_hll_substrings('words_english.txt', relative_error)\n",
-    "\n",
-    "hll_danish_substrings_count = len(hll_danish_substrings)\n",
-    "hll_english_substrings_count = len(hll_english_substrings)\n",
-    "\n",
-    "print(f'{len(hll_danish_substrings)} Danish substrings [{hll_danish_substrings_count * (1 - relative_error)}, {hll_danish_substrings_count * (1 + relative_error)}]')\n",
-    "print(f'{len(hll_english_substrings)} English substrings [{hll_english_substrings_count * (1 - relative_error)}, {hll_english_substrings_count * (1 + relative_error)}]')"
+    "hll_english_substrings_estimate = len(hll_english_substrings)\n",
+    "hll_english_substrings_lower_bound = hll_english_substrings_estimate * (1 - relative_error)\n",
+    "hll_english_substrings_upper_bound = hll_english_substrings_estimate * (1 + relative_error)\n",
+    "print(f'{hll_english_substrings_estimate} English substrings [{hll_english_substrings_lower_bound}, {hll_english_substrings_upper_bound}]')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-30T17:07:20.434582Z",
-     "start_time": "2024-04-30T17:06:55.351480Z"
+     "end_time": "2024-04-30T17:30:55.288348Z",
+     "start_time": "2024-04-30T17:30:29.917980Z"
     }
    },
-   "execution_count": 8
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -198,28 +202,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4292008 combined substrings\n",
-      "51323 common substrings\n"
+      "4292008 combined substrings [4249087.92, 4334928.08]\n",
+      "51323 common substrings [-35030.389999999665, 137676.38999999966]\n"
      ]
     }
    ],
    "source": [
     "hll_combined_substrings = copy.deepcopy(hll_english_substrings)\n",
     "hll_combined_substrings.update(hll_danish_substrings)\n",
-    "hll_combined_substrings_count = len(hll_combined_substrings)\n",
-    "print(f'{len(hll_combined_substrings)} combined substrings')\n",
+    "hll_combined_substrings_estimate = len(hll_combined_substrings)\n",
+    "hll_combined_substrings_lower_bound = hll_combined_substrings_estimate * (1 - relative_error)\n",
+    "hll_combined_substrings_upper_bound = hll_combined_substrings_estimate * (1 + relative_error)\n",
+    "print(f'{hll_combined_substrings_estimate} combined substrings [{hll_combined_substrings_lower_bound}, {hll_combined_substrings_upper_bound}]')\n",
     "\n",
-    "hll_common_substrings_count = hll_danish_substrings_count + hll_english_substrings_count - hll_combined_substrings_count\n",
-    "print(f'{hll_common_substrings_count} common substrings')"
+    "hll_common_substrings_count = hll_danish_substrings_estimate + hll_english_substrings_estimate - hll_combined_substrings_estimate\n",
+    "hll_common_substrings_lower_bound = hll_danish_substrings_lower_bound + hll_english_substrings_lower_bound - hll_combined_substrings_upper_bound\n",
+    "hll_common_substrings_upper_bound = hll_danish_substrings_upper_bound + hll_english_substrings_upper_bound - hll_combined_substrings_lower_bound\n",
+    "print(f'{hll_common_substrings_count} common substrings [{hll_common_substrings_lower_bound}, {hll_common_substrings_upper_bound}]')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-30T17:07:27.959298Z",
-     "start_time": "2024-04-30T17:07:27.940298Z"
+     "end_time": "2024-04-30T17:31:00.550509Z",
+     "start_time": "2024-04-30T17:31:00.536294Z"
     }
    },
-   "execution_count": 10
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
