--- a/Assignment2/assignment2.ipynb
+++ b/Assignment2/assignment2.ipynb
@@ -39,8 +39,8 @@
    "metadata": {
     "id": "lKB_dxn_S8LQ",
     "ExecuteTime": {
-     "end_time": "2024-04-30T14:52:41.727153Z",
-     "start_time": "2024-04-30T14:52:40.298688Z"
+     "end_time": "2024-05-01T16:46:40.171948Z",
+     "start_time": "2024-05-01T16:46:38.749045Z"
     }
    },
    "source": [
@@ -50,7 +50,7 @@
     "import hyperloglog\n",
     "import copy"
    ],
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -58,10 +58,10 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\r\n",
-      "100  258k  100  258k    0     0   850k      0 --:--:-- --:--:-- --:--:--  851k\r\n",
+      "100  258k  100  258k    0     0   790k      0 --:--:-- --:--:-- --:--:--  789k\r\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\r\n",
-      "100 4135k  100 4135k    0     0  4927k      0 --:--:-- --:--:-- --:--:-- 4923k\r\n"
+      "100 4135k  100 4135k    0     0  4982k      0 --:--:-- --:--:-- --:--:-- 4982k\r\n"
      ]
     }
    ]
@@ -84,8 +84,8 @@
     "id": "6ONEGRAPAFNx",
     "outputId": "d9dd9ca7-fb89-432f-ab80-932225f90558",
     "ExecuteTime": {
-     "end_time": "2024-04-30T14:59:20.345919Z",
-     "start_time": "2024-04-30T14:58:55.030360Z"
+     "end_time": "2024-05-01T16:46:49.655121Z",
+     "start_time": "2024-05-01T16:46:49.224678Z"
     }
    },
    "source": [
@@ -106,14 +106,14 @@
     "hll_combined.update(hll_danish) # Merge the other HLL into the combined one\n",
     "print(f'Combined the two languages have about {len(hll_combined)} words')"
    ],
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HLL reports about 414464 Danish words and 3928867 English words\n",
-      "Combined the two languages have about 4292008 words\n"
+      "HLL reports about 25642 Danish words and 372669 English words\n",
+      "Combined the two languages have about 395672 words\n"
      ]
     }
    ]
@@ -163,28 +163,31 @@
     "                hll.add(word[i:j])\n",
     "  return hll\n",
     "\n",
+    "\n",
+    "def print_statistics(estimate, absolute_error, text):\n",
+    "    print(f\"{estimate} {text} [{max(estimate - absolute_error, 0)}, {estimate + absolute_error}]\")\n",
+    "\n",
+    "\n",
     "relative_error = 0.01\n",
     "\n",
     "hll_danish_substrings = create_hll_substrings('words_danish.txt', relative_error)\n",
-    "hll_danish_substrings_estimate = len(hll_danish_substrings)\n",
-    "hll_danish_substrings_lower_bound = hll_danish_substrings_estimate * (1 - relative_error)\n",
-    "hll_danish_substrings_upper_bound = hll_danish_substrings_estimate * (1 + relative_error)\n",
-    "print(f'{hll_danish_substrings_estimate} Danish substrings [{hll_danish_substrings_lower_bound}, {hll_danish_substrings_upper_bound}]')\n",
+    "danish_substrings_estimate = len(hll_danish_substrings)\n",
+    "danish_substrings_absolute_error = relative_error * danish_substrings_estimate\n",
+    "print_statistics(danish_substrings_estimate, danish_substrings_absolute_error, \"Danish substrings\")\n",
     "\n",
     "hll_english_substrings = create_hll_substrings('words_english.txt', relative_error)\n",
-    "hll_english_substrings_estimate = len(hll_english_substrings)\n",
-    "hll_english_substrings_lower_bound = hll_english_substrings_estimate * (1 - relative_error)\n",
-    "hll_english_substrings_upper_bound = hll_english_substrings_estimate * (1 + relative_error)\n",
-    "print(f'{hll_english_substrings_estimate} English substrings [{hll_english_substrings_lower_bound}, {hll_english_substrings_upper_bound}]')"
+    "english_substrings_estimate = len(hll_english_substrings)\n",
+    "english_substrings_absolute_error = relative_error * english_substrings_estimate\n",
+    "print_statistics(english_substrings_estimate, english_substrings_absolute_error, \"English substrings\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-30T17:30:55.288348Z",
-     "start_time": "2024-04-30T17:30:29.917980Z"
+     "end_time": "2024-05-01T16:47:18.202775Z",
+     "start_time": "2024-05-01T16:46:52.676500Z"
     }
    },
-   "execution_count": 11
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -203,45 +206,35 @@
      "output_type": "stream",
      "text": [
       "4292008 combined substrings [4249087.92, 4334928.08]\n",
-      "51323 common substrings [-35030.389999999665, 137676.38999999966]\n"
+      "51323 common substrings [0, 137676.39]\n"
      ]
     }
    ],
    "source": [
     "hll_combined_substrings = copy.deepcopy(hll_english_substrings)\n",
     "hll_combined_substrings.update(hll_danish_substrings)\n",
-    "hll_combined_substrings_estimate = len(hll_combined_substrings)\n",
-    "hll_combined_substrings_lower_bound = hll_combined_substrings_estimate * (1 - relative_error)\n",
-    "hll_combined_substrings_upper_bound = hll_combined_substrings_estimate * (1 + relative_error)\n",
-    "print(f'{hll_combined_substrings_estimate} combined substrings [{hll_combined_substrings_lower_bound}, {hll_combined_substrings_upper_bound}]')\n",
+    "combined_substrings_estimate = len(hll_combined_substrings)\n",
+    "combined_substrings_absolute_error = relative_error * combined_substrings_estimate\n",
+    "print_statistics(combined_substrings_estimate, combined_substrings_absolute_error, \"combined substrings\")\n",
     "\n",
-    "hll_common_substrings_count = hll_danish_substrings_estimate + hll_english_substrings_estimate - hll_combined_substrings_estimate\n",
-    "hll_common_substrings_lower_bound = hll_danish_substrings_lower_bound + hll_english_substrings_lower_bound - hll_combined_substrings_upper_bound\n",
-    "hll_common_substrings_upper_bound = hll_danish_substrings_upper_bound + hll_english_substrings_upper_bound - hll_combined_substrings_lower_bound\n",
-    "print(f'{hll_common_substrings_count} common substrings [{hll_common_substrings_lower_bound}, {hll_common_substrings_upper_bound}]')"
+    "common_substrings_estimate = english_substrings_estimate + danish_substrings_estimate - combined_substrings_estimate\n",
+    "common_substrings_absolute_error = english_substrings_absolute_error + danish_substrings_absolute_error + combined_substrings_absolute_error\n",
+    "print_statistics(common_substrings_estimate, common_substrings_absolute_error, \"common substrings\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-30T17:31:00.550509Z",
-     "start_time": "2024-04-30T17:31:00.536294Z"
+     "end_time": "2024-05-01T16:47:21.892956Z",
+     "start_time": "2024-05-01T16:47:21.879695Z"
     }
    },
-   "execution_count": 12
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
    "source": [
     "3. Suppose that the intersection size is at least 1% of each of the two sets. How small relative error on the cardinality estimates would you need to estimate the number of common substrings up to a relative error of 10%? (NB! The implementation provided does not support very small relative errors.)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
