--- a/Assignment2/assignment2.ipynb
+++ b/Assignment2/assignment2.ipynb
@@ -165,7 +165,7 @@
     "\n",
     "\n",
     "def print_statistics(estimate, absolute_error, text):\n",
-    "    print(f\"{estimate} {text} [{max(estimate - absolute_error, 0)}, {estimate + absolute_error}]\")\n",
+    "    print(f\"{estimate} {text} [{estimate - absolute_error}, {estimate + absolute_error}]\")\n",
     "\n",
     "\n",
     "relative_error = 0.01\n",
@@ -183,11 +183,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-01T16:47:18.202775Z",
-     "start_time": "2024-05-01T16:46:52.676500Z"
+     "end_time": "2024-05-02T09:41:33.069878Z",
+     "start_time": "2024-05-02T09:41:07.770695Z"
     }
    },
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -206,7 +206,7 @@
      "output_type": "stream",
      "text": [
       "4292008 combined substrings [4249087.92, 4334928.08]\n",
-      "51323 common substrings [0, 137676.39]\n"
+      "51323 common substrings [-35030.39, 137676.39]\n"
      ]
     }
    ],
@@ -224,11 +224,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-01T16:47:21.892956Z",
-     "start_time": "2024-05-01T16:47:21.879695Z"
+     "end_time": "2024-05-02T09:41:35.881269Z",
+     "start_time": "2024-05-02T09:41:35.866204Z"
     }
    },
-   "execution_count": 6
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
