--- a/Assignment2/assignment2.ipynb
+++ b/Assignment2/assignment2.ipynb
@@ -1,19 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3 (ipykernel)"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -36,34 +21,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
-    "id": "lKB_dxn_S8LQ",
     "ExecuteTime": {
      "end_time": "2024-05-01T16:46:40.171948Z",
      "start_time": "2024-05-01T16:46:38.749045Z"
-    }
+    },
+    "id": "lKB_dxn_S8LQ"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100  258k  100  258k    0     0  1070k      0 --:--:-- --:--:-- --:--:-- 1073k\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 4135k  100 4135k    0     0  8541k      0 --:--:-- --:--:-- --:--:--     0 --:--:-- --:--:-- 8544k\n"
+     ]
+    }
+   ],
    "source": [
     "!curl https://raw.githubusercontent.com/rasmus-pagh/apx/main/data/words_danish.txt -o words_danish.txt\n",
     "!curl https://raw.githubusercontent.com/rasmus-pagh/apx/main/data/words_english.txt -o words_english.txt\n",
     "\n",
     "import hyperloglog\n",
     "import copy"
-   ],
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\r\n",
-      "100  258k  100  258k    0     0   790k      0 --:--:-- --:--:-- --:--:--  789k\r\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\r\n",
-      "100 4135k  100 4135k    0     0  4982k      0 --:--:-- --:--:-- --:--:-- 4982k\r\n"
-     ]
-    }
    ]
   },
   {
@@ -77,17 +62,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-01T16:46:49.655121Z",
+     "start_time": "2024-05-01T16:46:49.224678Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "6ONEGRAPAFNx",
-    "outputId": "d9dd9ca7-fb89-432f-ab80-932225f90558",
-    "ExecuteTime": {
-     "end_time": "2024-05-01T16:46:49.655121Z",
-     "start_time": "2024-05-01T16:46:49.224678Z"
-    }
+    "outputId": "d9dd9ca7-fb89-432f-ab80-932225f90558"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HLL reports about 25642 Danish words and 372669 English words\n",
+      "Combined the two languages have about 395672 words\n"
+     ]
+    }
+   ],
    "source": [
     "def create_hll(filename, relative_error):\n",
     "  hll = hyperloglog.HyperLogLog(relative_error)\n",
@@ -105,17 +101,6 @@
     "hll_combined = copy.deepcopy(hll_english) # Create a copy of the HLL\n",
     "hll_combined.update(hll_danish) # Merge the other HLL into the combined one\n",
     "print(f'Combined the two languages have about {len(hll_combined)} words')"
-   ],
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HLL reports about 25642 Danish words and 372669 English words\n",
-      "Combined the two languages have about 395672 words\n"
-     ]
-    }
    ]
   },
   {
@@ -141,13 +126,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T09:41:33.069878Z",
+     "start_time": "2024-05-02T09:41:07.770695Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "414464 Danish substrings [410319.36, 418608.64]\n",
-      "3928867 English substrings [3889578.33, 3968155.67]\n"
+      "414464 Danish substrings [410319.36, 418608.64]\n"
      ]
     }
    ],
@@ -157,7 +149,6 @@
     "  with open(filename, 'r') as f:\n",
     "    for word in f:\n",
     "        n = len(word)\n",
-    "        hll.add(\"\")\n",
     "        for i in range(n):\n",
     "            for j in range(i + 1, n + 1):\n",
     "                hll.add(word[i:j])\n",
@@ -179,27 +170,27 @@
     "english_substrings_estimate = len(hll_english_substrings)\n",
     "english_substrings_absolute_error = relative_error * english_substrings_estimate\n",
     "print_statistics(english_substrings_estimate, english_substrings_absolute_error, \"English substrings\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-02T09:41:33.069878Z",
-     "start_time": "2024-05-02T09:41:07.770695Z"
-    }
-   },
-   "execution_count": 8
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "2. Based on the answer from 1), and a cardinality estimate for the union, give upper and lower bounds on the number of common substrings in the two languages."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "2. Based on the answer from 1), and a cardinality estimate for the union, give upper and lower bounds on the number of common substrings in the two languages."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-02T09:41:35.881269Z",
+     "start_time": "2024-05-02T09:41:35.866204Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -220,24 +211,40 @@
     "common_substrings_estimate = english_substrings_estimate + danish_substrings_estimate - combined_substrings_estimate\n",
     "common_substrings_absolute_error = english_substrings_absolute_error + danish_substrings_absolute_error + combined_substrings_absolute_error\n",
     "print_statistics(common_substrings_estimate, common_substrings_absolute_error, \"common substrings\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-02T09:41:35.881269Z",
-     "start_time": "2024-05-02T09:41:35.866204Z"
-    }
-   },
-   "execution_count": 9
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "3. Suppose that the intersection size is at least 1% of each of the two sets. How small relative error on the cardinality estimates would you need to estimate the number of common substrings up to a relative error of 10%? (NB! The implementation provided does not support very small relative errors.)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "3. Suppose that the intersection size is at least 1% of each of the two sets. How small relative error on the cardinality estimates would you need to estimate the number of common substrings up to a relative error of 10%? (NB! The implementation provided does not support very small relative errors.)"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
