--- a/Assignment2/assignment2.ipynb
+++ b/Assignment2/assignment2.ipynb
@@ -139,7 +139,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "414464 Danish substrings [410319.36, 418608.64]\n"
+      "414464 Danish substrings [410319.36, 418608.64]\n",
+      "3928867 English substrings [3889578.33, 3968155.67]\n"
      ]
     }
    ],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-02T09:41:35.881269Z",
