Updates from Overleaf

--- a/Assignment3/assignment3.tex
+++ b/Assignment3/assignment3.tex
@@ -127,6 +127,15 @@ The Wikipedia article on TSP claims that it is possible to solve TSP in the sett
 
         Finally, suppose the tour $C'$ does not contain the ghost edge $(v_i, v_i')$. We will now show how to construct a tour $C''$ of $G$ from $C'$ which contains the ghost edge $(v_i, v_i')$ such that $\text{cost}(C'') \le \text{cost}(C')$. This procedure can then be applied for every ghost edge, which allows us to use the above construction for a tour $C$ in $G$, resulting in $\text{cost}(C) \le d$.
 
+        \begin{figure}[]
+            \centering
+            \includegraphics{}
+            \caption{Caption}
+            \label{fig:enter-label}
+        \end{figure}
+
+        
+
         
     \end{itemize}
     
