Updates from Overleaf

--- a/Assignment3/assignment3.tex
+++ b/Assignment3/assignment3.tex
@@ -129,7 +129,7 @@ The Wikipedia article on TSP claims that it is possible to solve TSP in the sett
 
         \begin{figure}[]
             \centering
-            \includegraphics{}
+            \includegraphics{Assignment3/figures.pdf}
             \caption{Caption}
             \label{fig:enter-label}
         \end{figure}
